# VulkanLearn_Source

./: .gitmodules  CMakeLists.txt  update_deps.py
Shaders/: Error.shader
Shaders/GLSL/: compile.bat  shader.frag  shader.vert  triangle.shader  triangle.vert
Shaders/SPIR-V/: triangle_vert.spv
Source/: CMakeLists.txt
Source/Client/: Client.cpp  Client.h
Source/Common/: DebugTool.h  FileSystem.h  Guid.cpp  Guid.h  IObject.h  IPtr.h  IRef.h  IRefObject.h  ISerialize.h  MD5.cpp  MD5.h  PaletteCommon.h  Singleton.h  Time.h  Utilities.h
Source/Common/Math/: SphericalHarmonic.h  Vecter.cpp  Vecter.h  Vector.cpp  Vector.h
Source/Core/: Core.cpp
Source/Render/: IRenderElement.cpp  IRenderElement.h  IRenderPass.cpp  IRenderPass.h  Pipeline.h  RenderElement.cpp  RenderElement.h  RenderPipeline.cpp  RenderPipeline.h  RenderScene.cpp  RenderScene.h  SceneCuller.cpp  SceneCuller.h  VertexInputBindingDescription.h
Source/Render/FrameGraph/: FrameGraph.cpp  FrameGraph.h
Source/Render/Mesh/: VertexData.h  VertexInputBindingDescription.cpp  VertexInputBindingDescription.h
Source/Render/RenderPass/: SimplePass.cpp  SimplePass.h
Source/Render/Shader/: CameraComponent.cpp  ConstantBuffer.cpp  ConstantBuffer.h  DescriptorPool.h  ShaderCommon.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderDeclaration.h  ShaderParameter.h
Source/Render/Vulkan/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDivice.cpp  VulkanDivice.h  VulkanGlobal.cpp  VulkanGlobal.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUtilities.cpp  VulkanUtilities.h
Source/Resource/: IMesh.cpp  IMesh.h  Material.cpp  Material.h  RenderMesh.cpp  RenderMesh.h  Resourse.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Source/World/: Camera.cpp  Camera.h  CameraComponent.h  Entity.cpp  Entity.h  IComponent.cpp  IComponent.h  IPrimitiveComponent.cpp  IPrimitiveComponent.h  ModelComponent.cpp  ModelComponent.h  ModelRenderer.cpp  ModelRenderer.h  TransformComponent.cpp  TransformComponent.h  World.cpp  World.h
